Fix #1: Add initial files and directories

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,40 @@
 # Debug files
 *.dSYM/
 *.su
+
+# Automake
+Makefile.in
+aclocal.m4
+ar-lib
+autom4te.cache
+compile
+config.guess
+config.sub
+configure
+depcomp
+install-sh
+ltmain.sh
+m4/libtool.m4
+m4/ltoptions.m4
+m4/ltsugar.m4
+m4/ltversion.m4
+m4/lt~obsolete.m4
+missing
+config.h.in
+test-driver
+
+# Configure
+Makefile
+config.log
+config.status
+libtool
+.deps
+src/config.h
+src/stamp-h1
+
+# Project specific files
+src/drool
+src/drool.1
+src/test/test-suite.log
+src/test/test*.sh.log
+src/test/test*.sh.trs
