A lot of more stuff
- Add sllq submodule
- Implement a lot of the engine
  - callbacks
  - client pool
  - client
  - query object
  - use libev
  - timings
- Use pcap-thread layers
- Use omg-dns

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "src/pcap-thread"]
 	path = src/pcap-thread
 	url = https://github.com/DNS-OARC/pcap-thread.git
+[submodule "src/sllq"]
+	path = src/sllq
+	url = https://github.com/DNS-OARC/sllq.git
