--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "src/sllq"]
 	path = src/sllq
 	url = https://github.com/DNS-OARC/sllq.git
+[submodule "src/parseconf"]
+	path = src/parseconf
+	url = https://github.com/DNS-OARC/parseconf.git
