--- a/src/drool.conf.example
+++ b/src/drool.conf.example
@@ -1,9 +1,6 @@
 log all;
 nolog network debug;
 
-read "/path/to/file.pcap";
-#input "eth0";
-
 filter "udp port 53";
 
 timing ignore;
@@ -35,3 +32,7 @@ client_pool client_ttl 0.05;
 #client ip ip[:port[-range]]
 #client net ip mask [port[-range]];
 #client maximum <num>;
+
+# Removed / disabled:
+#read "/path/to/file.pcap";
+#input "eth0";
