TCP, send as, proper shutdown
- Fix #7: Verified TCP support, can easily break 50k conn/sec but due to
  socket exhaustion in the OS/kernel it can not be sustained
- Add `client_pool sendas <val>` to control how queries are sent
- Add timing details to warning about not keeping up with timings
- Do proper `shutdown()` of the socket
- Reworked client about/close/free
- When failing to allocate socket due to exhaustion, retry the query
  until successful
- Use inline helpers for client_pool lists
- Rework log functions to be able to use given errno
- Remove `client_set_fd()`, `client_connect_fd()` and `client_abort()`
- Add config option `context client_pools <num>;` to control the number
  of client pools running, set default to 1
- Update man-page

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -56,6 +56,7 @@ drool_SOURCES = callback.c client.c client_pool.c \
     pcap-thread/pcap_thread.c \
     sllq/sllq.c
 dist_drool_SOURCES = assert.h callback.h client.h client_pool.h \
+    client_pool_sendas.h \
     conf.h conf_client_pool.h conf_file.h conf_interface.h \
     drool.h dropback.h log.h query.h stats_callback.h timing.h \
     omg-dns/omg_dns.h \
