--- a/src/drool.1.in
+++ b/src/drool.1.in
@@ -90,33 +90,49 @@ drool \- DNS Replay Tool
 \fBdrool\fR can replay DNS traffic from packet capture (PCAP) files and send
 it to a specified server, with options such as to manipulate the timing
 between packets, as well as loop packets infinitely or for a set number
-of iterations. This tool's goal is to be able to produce a high amount
-of UDP packets per second and TCP sessions per second on common hardware.
+of iterations.
+This tool's goal is to be able to produce a high amount of UDP packets per
+second and TCP sessions per second on common hardware.
 
 The purpose can be to simulate Distributed Denial of Service (DDoS) attacks
-on the DNS and measure normal DNS querying. For example, the tool could
-enable you to take a snapshot of a DDoS and be able to replay it later
-to test if new code or hardening techniques are useful, safe & effective.
-Another example is to be able to replay a packet stream for a
-bug that is sequence- and/or timing-related in order to validate the
-efficacy of subsequent bug fixes.
+on the DNS and measure normal DNS querying.
+For example, the tool could enable you to take a snapshot of a DDoS and be
+able to replay it later to test if new code or hardening techniques are
+useful, safe & effective.
+Another example is to be able to replay a packet stream for a bug that is
+sequence- and/or timing-related in order to validate the efficacy of
+subsequent bug fixes.
+
+Most of the functionality of this tool is controlled by the configuration
+used, please see
+.BR drool.conf (5)
+for more information.
+.SH CURRENT IMPLEMENTATION LIMITATIONS
+See
+.BR drool.conf (5)
+for the current implementation limitations that exists.
 .SH OPTIONS
 .TP
 \fB\-c\fR [\fItype\fR:]\fIconfig\fR
 Specify the configuration to use, if no \fItype\fR is given then
-\fIconfig\fR expects to be a file. Valid types are \fBfile\fR and \fBtext\fR.
-Can be given multiple times and will be processed in the
-given order. See drool.conf(5) for configuration syntax.
+\fIconfig\fR expects to be a file.
+Valid types are \fBfile\fR and \fBtext\fR.
+Can be given multiple times and will be processed in the given order.
+See
+.BR drool.conf (5)
+for configuration syntax.
 .TP
 \fB\-l\fR \fIfacility\fR[:\fIlevel\fR]
 Enable logging for \fIfacility\fR, optional log \fIlevel\fR can be given
-to enable just that. Can be given multiple times and will be
-processed in the given order. See LOGGING for more information.
+to enable just that.
+Can be given multiple times and will be processed in the given order.
+See LOGGING for more information.
 .TP
 \fB\-L\fR \fIfacility\fR[:\fIlevel\fR]
-Disable logging for \fIfacility\fR, optional log \fIlevel\fR can be
-given to disable just that. Can be given multiple times and
-will be processed in the given order. See LOGGING for more information.
+Disable logging for \fIfacility\fR, optional log \fIlevel\fR can be given
+to disable just that.
+Can be given multiple times and will be processed in the given order.
+See LOGGING for more information.
 .TP
 \fB\-f\fR \fIfilter\fR
 Set the Berkeley Packet Filter to use.
@@ -128,8 +144,7 @@ Capture packets from interface, can be given multiple times.
 Read packets from PCAP file, can be given multiple times.
 .TP
 \fB\-R\fR \fImode\fR
-Specify the mode for reading PCAP files, see READ MODES for
-available modes.
+Specify the mode for reading PCAP files, see READ MODES for available modes.
 .TP
 .\" \fB\-o\fR \fIinterface\fR
 .\" todo
@@ -138,12 +153,12 @@ available modes.
 .\" todo
 .\" .TP
 .B \-n
-Dry run mode, do not allocate any outbound sockets or
-generate any network traffic.
+Dry run mode, do not allocate any outbound sockets or generate any
+network traffic.
 .TP
 .B \-v
-Enable verbose, a simple way to enable logging. Can be
-given multiple times to increase verbosity level.
+Enable verbose, a simple way to enable logging.
+Can be given multiple times to increase verbosity level.
 .TP
 .B \-h
 Print help and exit.
@@ -204,9 +219,9 @@ Loop the given file(s) until interrupted.
 Iterate the given file(s) for \fInumber\fR of times.
 .SH EXITING
 \fBdrool\fR will exit once processing of PCAP files is complete or if
-interrupted (CTRL-C or SIGINT). If any interface is being processed or
-if loop read mode is being used, then \fBdrool\fR must be interrupted in
-order to exit.
+interrupted (CTRL-C or SIGINT).
+If any interface is being processed or if loop read mode is being used,
+then \fBdrool\fR must be interrupted in order to exit.
 
 \fBdrool\fR can be forcefully exited by interrupting (CTRL-C or SIGINT) twice.
 .SH EXIT VALUES
