--- a/src/drool.1.in
+++ b/src/drool.1.in
@@ -254,6 +254,26 @@ then \fBdrool\fR must be interrupted in order to exit.
 6 \- pcap-thread error
 .br
 7 \- out of memory
+.SH EXAMPLES
+.TP
+\fBdrool \-vv \-c 'text:timing multiply 2.0; client_pool target "127.0.0.1" "53"; client_pool sendas udp;' \-r file.pcap\fR
+
+Send all DNS queries twice as fast as found in the PCAP file to localhost
+using UDP.
+.TP
+\fBdrool \-vv \-c 'text:filter "tcp"; client_pool target "127.0.0.1" "53";' \-r file.pcap\fR
+
+Only look for DNS queries in TCP traffic and send it to localhost.
+.TP
+\fBdrool \-vv \-c 'text:filter "port 53"; client_pool target "172.16.1.2" "53";' \-i eth0\fR
+
+Listen for DNS queries on eth0 and send them to an (assuming) internal server.
+.TP
+\fBdrool \-vv \-c 'text:filter "udp"; timing ignore; context client_pools 5; client_pool target "127.0.0.1" "53"; client_pool skip_reply;' \-r file.pcap\fR
+
+Take all UDP DNS queries found in the PCAP file and send them as fast as
+possible to localhost by ignoring both timings, replies and starting 5
+contexts (threads) that will simultaneously send queries.
 .SH SEE ALSO
 drool.conf(5)
 .SH AUTHORS
