--- a/src/drool.conf.5.in
+++ b/src/drool.conf.5.in
@@ -99,10 +99,9 @@ same rate.
 This is the default timing mode if none is specified.
 .TP
 \fBtiming\fR best_effort ;
-Set the timing mode to try and keep up with interval between the traffic
-received.
-Unlike \fBkeep\fR, this mode will not warn about being unable to keep to
-the timings.
+This mode is deprecated and is the same as
+.IR keep .
+Will be removed in future major release.
 .TP
 \fBtiming\fR add NANOSECONDS ;
 Set the timing mode to add the given nanoseconds to the interval between
