--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,8 @@
-language: c
-compiler:
-  - clang
-  - gcc
+language: bash
 before_install:
+  - sudo add-apt-repository -y ppa:dns-oarc/dnsjit-pr
   - sudo apt-get -qq update
-  - sudo apt-get install -y libpcap-dev libev-dev
+  - sudo apt-get install -y autoconf automake dnsjit
 install: ./autogen.sh
 script:
   - ./configure
