--- a/Makefile.am
+++ b/Makefile.am
@@ -33,15 +33,14 @@
 # ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 # POSSIBILITY OF SUCH DAMAGE.
 
-ACLOCAL_AMFLAGS = -I m4 -I src/pcap-thread/m4
+ACLOCAL_AMFLAGS = -I m4
 
 MAINTAINERCLEANFILES = $(srcdir)/Makefile.in \
-    $(srcdir)/src/config.h.in~ \
     $(srcdir)/configure
 
 SUBDIRS = src
 
-dist_doc_DATA = CHANGES README.md LICENSE NOTES.md
+dist_doc_DATA = CHANGES README.md LICENSE
 
 EXTRA_DIST = m4
 
