--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: net
 Priority: optional
 Maintainer: Jerry Lundström <lundstrom.jerry@gmail.com>
 Build-Depends: debhelper (>= 8.0.0), build-essential, automake, autoconf,
- libpcap-dev, netbase, libev-dev, libtool
+ netbase, dnsjit
 Standards-Version: 3.9.4
 Homepage: https://www.dns-oarc.net/tools/drool
 Vcs-Git: https://github.com/DNS-OARC/drool.git
