--- a/configure.ac
+++ b/configure.ac
@@ -36,7 +36,7 @@
 AC_PREREQ(2.61)
 AC_INIT([drool], [2.0.0], [admin@dns-oarc.net], [drool], [https://github.com/DNS-OARC/drool/issues])
 AM_INIT_AUTOMAKE([-Wall -Werror foreign subdir-objects])
-AC_CONFIG_SRCDIR([src/drool.in])
+AC_CONFIG_SRCDIR([src/main.lua])
 AC_CONFIG_MACRO_DIR([m4])
 
 # Checks for programs.
