--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,13 @@
+addons:
+  apt:
+    sources:
+    - sourceline: 'ppa:dns-oarc/dnsjit-pr'
+    update: true
+    packages:
+    - autoconf
+    - automake
+    - dnsjit
 language: bash
-before_install:
-  - sudo add-apt-repository -y ppa:dns-oarc/dnsjit-pr
-  - sudo apt-get -qq update
-  - sudo apt-get install -y autoconf automake dnsjit
 install: ./autogen.sh
 script:
   - ./configure
