--- a/src/test/Makefile.am
+++ b/src/test/Makefile.am
@@ -37,18 +37,15 @@ MAINTAINERCLEANFILES = $(srcdir)/Makefile.in
 
 CLEANFILES = test*.log test*.trs \
   *.pcap-dist \
-  test4.out test4.out2
+  test2.out test2.out2
 
-TESTS = test1.sh test2.sh test3.sh test4.sh
+TESTS = test1.sh test2.sh
 
-test3.sh: dns.pcap-dist 1qtcp.pcap-dist
-
-test4.sh: dns.pcap-dist 1qtcp.pcap-dist
+test2.sh: dns.pcap-dist 1qtcp.pcap-dist
 
 .pcap.pcap-dist:
 	cp "$<" "$@"
 
 EXTRA_DIST = $(TESTS) \
-  test2.conf \
   dns.pcap 1qtcp.pcap \
-  test4.gold
+  test2.gold
