--- a/debian/control
+++ b/debian/control
@@ -11,7 +11,7 @@ Vcs-Browser: https://github.com/DNS-OARC/drool
 
 Package: drool
 Architecture: all
-Depends: ${misc:Depends}
+Depends: ${misc:Depends}, dnsjit (>= 0.9.4)
 Description: DNS Replay Tool
  drool can replay DNS traffic from packet capture (PCAP) files and send it
  to a specified server, with options such as to manipulate the timing
